--- a/frontend/cricket-frontend/.env
+++ b/frontend/cricket-frontend/.env
@@ -1,1 +1,1 @@
-BACKEND_URL = https://real-time-cricket-team-selection-room-bvmw.onrender.com
+VITE_BACKEND_URL = https://real-time-cricket-team-selection-room-bvmw.onrender.com
