--- a/frontend/cricket-frontend/.env
+++ b/frontend/cricket-frontend/.env
@@ -1,1 +1,2 @@
-REACT_APP_BACKEND_URL = https://real-time-cricket-team-selection-room-bvmw.onrender.com
+REACT_APP_BACKEND_URL=https://real-time-cricket-team-selection-room-bvmw.onrender.com
+PORT = 3001
