--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^17.0.1",
     "express": "^5.1.0",
     "socket.io": "^4.8.1",
     "uuid": "^11.1.0"
